# FRIVeil

./: AGENTS.md  Cargo.toml  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_QUICK_REFERENCE.md  benchmark_optimizations.sh
.sisyphus/: boulder.json
.sisyphus/drafts/: init-deep.md  risc0-to-pico-migration.md
.sisyphus/notepads/pico-cli-integration-test/: learnings.md
.sisyphus/notepads/risc0-to-pico-migration/: completion-summary.md
.sisyphus/plans/: pico-cli-integration-test.md  risc0-to-pico-migration.md
proof_of_proof/host/: Cargo.toml
proof_of_proof_pico/: Cargo.toml  README.md
proof_of_proof_pico/app/: Cargo.toml
proof_of_proof_pico/app/elf/: riscv32im-pico-zkvm-elf
proof_of_proof_pico/app/src/: main.rs
proof_of_proof_pico/prover/: Cargo.toml
proof_of_proof_pico/prover/src/: main.rs
src/: AGENTS.md
tests/: pico_integration_test.rs
