[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
FRIVeil = {path="../../"}
rand = { version = "0.9.1", default-features = false, features = ["std", "std_rng"] }
proof-core = {path = "../core"}
bincode = {version = "1.3"}

[[bin]]
name = "gen_input"
path = "src/bin/gen_input.rs"
