[package]
name = "proof-of-proof-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prover"
path = "src/main.rs"

[[bin]]
name = "gen_input"
path = "src/bin/gen_input.rs"

[dependencies]
pico-sdk = { git = "https://github.com/brevis-network/pico" }
pico-vm = { git = "https://github.com/brevis-network/pico" }
p3-koala-bear = { git = "https://github.com/brevis-network/Plonky3.git", rev = "411a80d" }
p3-field = { git = "https://github.com/brevis-network/Plonky3.git", rev = "411a80d" }
p3-symmetric = { git = "https://github.com/brevis-network/Plonky3.git", rev = "411a80d" }
clap = { version = "4.0", features = ["derive"] }
bincode = "1.3"
proof-core = { path = "../../proof_of_proof/core" }
FRIVeil = { path = "../../" }
rand = { version = "0.9.1", default-features = false, features = ["std", "std_rng"] }
tracing = "0.1"
itertools = "0.14"
